<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectFood">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00ffff"
        android:gravity="center"
        android:text="@string/page_name"
        android:textAlignment="center"
        android:textColor="#ff0000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#000"
            android:layout_marginRight="5dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/name_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sex"
            android:layout_marginRight="5dp"
            android:textColor="#000"
            android:textSize="20sp"/>
        <RadioGroup
            android:id="@+id/radioType"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/men"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="@string/man"/>
            <RadioButton
                android:id="@+id/women"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="@string/women"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/type"
            android:layout_marginRight="5dp"
            android:textColor="#000"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_height="match_parent">
            <CheckBox
                android:id="@+id/suan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/suan"/>
            <CheckBox
                android:id="@+id/fish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/fish"/>
            <CheckBox
                android:id="@+id/hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/hot"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/type"
            android:layout_marginRight="5dp"
            android:textColor="#000"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty"
                android:layout_marginRight="5dp"
                android:textColor="#333"
                android:textSize="20sp"/>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:progress="40"
                android:max="100" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/full"
                android:layout_marginRight="5dp"
                android:textColor="#333"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/newMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_menu"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <ImageView
        android:id="@+id/foodImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/guilin"/>
    <ToggleButton
        android:id="@+id/getNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/next"
        android:textOn="@string/detail"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
</LinearLayout>