<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />
    <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:id="@+id/btn_center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="24sp"
                android:textColor="@color/colorRed"
                android:background="@color/colorPrimary"
                android:layout_centerInParent="true"
                android:text="@string/btn_center" />
        <Button
                android:id="@+id/btn_top"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_toLeftOf="@+id/btn_center"
                android:layout_centerVertical="true"
                android:background="@color/colorBlue"
                android:text="@string/btn_left" />
        <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_toRightOf="@+id/btn_center"
                android:layout_centerVertical="true"
                android:background="@color/colorRed"
                android:text="@string/btn_right" />
        <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_above="@+id/btn_center"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_top" />
        <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/btn_center"
                android:background="@color/colorAccent"
                android:text="@string/btn_bottom" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>