<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">
        <Button
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:text="@string/margin"
                android:background="@color/colorAccent"
                android:layout_gravity="center"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:text="@string/padding"
                android:background="@color/colorBlue"
                android:layout_gravity="center"/>
        <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/content"
                android:textSize="24sp"
                android:textColor="#fff"
                android:background="@color/colorRed"
                android:layout_gravity="center"/>
</FrameLayout>
