<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!--    头部栏-->
    <LinearLayout
        android:id="@+id/myHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:background="@color/colorBlue"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/login_btn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@mipmap/me_menu_sail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discount" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@mipmap/me_menu_yh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/youhui" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@mipmap/me_menu_go" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
<!--    列表-->
    <ScrollView
        android:layout_below="@id/myHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/myOrder"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="70dp">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/list_my_menu"/>
                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/listText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/myOrder"
                        android:textColor="@color/black"
                        android:paddingTop="15dp"
                        android:textSize="25sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/grey"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="70dp">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/list_save"/>
                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mySave"
                        android:textColor="@color/black"
                        android:paddingTop="15dp"
                        android:textSize="25sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/grey"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="70dp">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/list_pwd"/>
                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/myKou"
                        android:textColor="@color/black"
                        android:paddingTop="15dp"
                        android:textSize="25sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/grey"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="70dp">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/list_my"/>
                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/myJin"
                        android:textColor="@color/black"
                        android:paddingTop="15dp"
                        android:textSize="25sp"/>

                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/lightGrey"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="70dp">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/list_safe_center"/>
                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/safeCenter"
                        android:textColor="@color/black"
                        android:paddingTop="15dp"
                        android:textSize="25sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/grey"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="70dp">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/list_address"/>
                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/myAddress"
                        android:textColor="@color/black"
                        android:paddingTop="15dp"
                        android:textSize="25sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/grey"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="70dp">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/list_service"/>
                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/myService"
                        android:textColor="@color/black"
                        android:paddingTop="15dp"
                        android:textSize="25sp"/>
                </RelativeLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/lightGrey"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="70dp">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/list_sug"/>
                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mySug"
                        android:textColor="@color/black"
                        android:paddingTop="15dp"
                        android:textSize="25sp"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>